# Pim

./: CMakeLists.txt  README.md  REFERENCES.md  UPMEM.md  dpu_host_helpers.h  model  model.md  program_dpu.c  simple-integers_dpu.c  simple-integers_host.cpp  test_host.cpp
HE/: PIM  references
HE/PIM/: NTT.md  pim.md  upmem.md
TEE/eBPF/: eBPF.md
sMPC/: GC.md
